--- a/queries/dbt_project.yml
+++ b/queries/dbt_project.yml
@@ -20,7 +20,7 @@ models:
   +persist_docs:
     relation: true
     columns: true
-  rj_seconserva:
+  queries:
     # Config indicated by + and applies to all files under models/example/
     infraestrutura_siscor_obras:
       +materialized: table
